✨ feat(build.gradle.kts): Add JBake configuration and serve task (WIP).